# python-postgres

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/client/: index.html
css/: styles.css
docs/: index.md  installation.md  quickstart.md  rationale.md
docs/api/: client.md
docs/css/: styles.css
docs/guides/: client.md  extensions.md
docs/js/assets/: python.js  python.min.js
guides/client/: index.html
guides/extensions/: index.html
installation/: index.html
js/: highlight.js
js/assets/: psql.js
postgresql/: __init__.py  _pg.py  _transactions.py
python_postgres/: __init__.py  _adapters.py  _client.py  _operations.py  _pg.py  _transactions.py  exceptions.py  types.py
quickstart/: index.html
rationale/: index.html
search/: search_index.json
