[project]
name = "python-postgres"
version = "0.0.6"
description = "Python Postgres aims to provide the simplest way to interact with PostgreSQL databases."
authors = [{ name = "Vinzenz Klass", email = "vinzenz.klass@ba.valantic.com" }]
repository = "https://github.com/VinzenzKlass/python-postgres"
readme = "README.md"
requires-python = ">=3.10.4"
keywords = ["python-postgres", "postgres", "PostgreSQL"]

dependencies = [
    "psycopg[pool]>=3.2.5",
    "pydantic>=2.10.6",
]

[tool.poetry.dependencies]
python = ">=3.11"
psycopg = { version = ">=3.0.0,<4.0.0", extras = ["pool"] }
pydantic = "^2.0.0"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pre-commit>=4.0.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
fix = true
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
