[project]
name = "python-postgres"
version = "0.0.7"
description = "Python Postgres aims to provide the simplest way to interact with PostgreSQL databases."
authors = [{ name = "Vinzenz Klass", email = "vinzenz.klass@valantic.com" }]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["python-postgres", "postgres", "PostgreSQL"]

dependencies = [
    "psycopg[pool,c]>=3.2.5",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[project.urls]
"Repository" = "https://github.com/VinzenzKlass/python-postgres"
"Psycopg Docs" = "https://www.psycopg.org/psycopg3/docs/index.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
fix = true
target-version = "py313"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
